test vscode git

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "array": "cpp",
-        "tuple": "cpp"
+        "tuple": "cpp",
+        "*.ipp": "cpp"
     }
 }
