1. Added Settings class which provides quick adjustion of exotic parameters; 2. Added some pre-compilation statements into main.cpp that can help quick switch from debugging to using.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "array": "cpp",
         "tuple": "cpp",
-        "*.ipp": "cpp"
+        "*.ipp": "cpp",
+        "iostream": "cpp"
     }
 }
