--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ include_directories("${PROJECT_SOURCE_DIR}")
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/source SRC) 
 
 find_package( OpenCV REQUIRED )
- find_package( CUDA QUIET REQUIRED)
- set  (CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -03 -gencode arch=compute_22,code=sm_22)
+# find_package( CUDA QUIET REQUIRED)
+# set  (CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -03 -gencode arch=compute_22,code=sm_22)
 add_executable( function_test  ${SRC})
 target_link_libraries( function_test -lpthread  ${OpenCV_LIBS})
